[tool.poetry]
name = "eulerProject"
version = "0.1.0"
description = ""
authors = ["Raymond Lam <raymondlam1991@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
ipython = "^7.18.1"
commitizen = "^2.4.2"
pytest = "^6.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
